making the services and function

--- a/AzureGettingStarted/AzureGettingStarted.API/AzureGettingStarted.API.csproj
+++ b/AzureGettingStarted/AzureGettingStarted.API/AzureGettingStarted.API.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AzureGettingStarted.Model\AzureGettingStarted.Model.csproj" />
     <ProjectReference Include="..\AzureGettingStarted.Repository\AzureGettingStarted.Repository.csproj" />
+    <ProjectReference Include="..\AzureGettingStarted.Services\AzureGettingStarted.Services.csproj" />
   </ItemGroup>
 
 </Project>
