making the angular part

--- a/AzureGettingStarted/AzureGettingStarted.API/appsettings.json
+++ b/AzureGettingStarted/AzureGettingStarted.API/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "VisionFunctionUrl": "http://google.be/",
-  "BlobAdress": "https://testingblobsstorage.blob.core.windows.net/pictures/",
-  "BlobSharedKey": "?sv=2019-02-02&ss=b&srt=sco&sp=rwdlac&se=2019-11-11T20:19:34Z&st=2019-11-11T12:19:34Z&sip=1.1.1.1-255.255.255.255&spr=https&sig=LlMItU7jtmIIalCsmu9vO664GvCKiQ6%2FCYAbL%2BP0h58%3D",
+  "VisionFunctionUrl": "",
+  "BlobAdress": "",
+  "BlobSharedKey": "",
   "ConnectionStrings": {
-    "DbConnection": "put your db connection here"
+    "DbConnection": ""
   }
 }
